# MSIwG

./: README.md
engine/: DEBUG.md  README.md  clangSetup.sh  engineDependencies.sh  setupAll.sh
engine/example/: .gitignore  CMakeLists.txt  build.sh
engine/example/src/: client.cpp
engine/include/: Board.hpp  CPGame.hpp  Promise.hpp
engine/source/: .gitignore  CMakeLists.txt  run.sh  staticDependencies.sh
engine/source/src/: CommandLine.cpp  CommandLine.hpp  GameContext.cpp  GameContext.hpp  GameCtxException.hpp  main.cpp
engine/source/src/Game/: CPGame.cpp  GameContext.cpp  GameContext.hpp  GameManager.cpp  GameManager.hpp
engine/source/src/Graphics/: Drawing.cpp  Drawing.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Texture.cpp  Texture.hpp
engine/source/src/Public/: CPGame.hpp  GameManager.hpp  Promise.hpp
engine/source/src/Sprites/: BoardSprite.cpp  BoardSprite.hpp  Gate.cpp  Gate.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp
engine/source/src/States/: GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  PlayState.cpp  PlayState.hpp  PlayStateEvents.cpp  PlayStateException.hpp  PlayStateInit.cpp  StateMachine.cpp  StateMachine.hpp
engine/source/src/UI/: UIButton.cpp  UIButton.hpp  UIObject.hpp
engine/source/src/Utils/: Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp
