CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0 FATAL_ERROR)
INCLUDE(CheckCXXCompilerFlag)

IF (NOT $ENV{CXX} STREQUAL "")
    SET(CMAKE_CXX_COMPILER $ENV{CXX})
ENDIF ()

PROJECT(GameClient CXX)

CHECK_CXX_COMPILER_FLAG("-std=c++1z" COMPILER_SUPPORTS_CXX17)
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../include")
SET(LIBCXXPATH "$ENV{HOME}/Downloads" CACHE STRING "path to installed libc++ using the installation script")


IF(NOT COMPILER_SUPPORTS_CXX17)
    MESSAGE(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} does not support C++1z")
ENDIF()

SET(LIBCXX_FLAGS "-stdlib=libc++ -L${LIBCXXPATH}/LLVM/build/lib")
SET(CMAKE_CXX_FLAGS "-L${LIBCXXPATH}/LLVM/build/lib -stdlib=libc++ -std=c++1z  -I${LIBCXXPATH}/LLVM/build/include/c++/v1 -nostdinc++")
SET(CMAKE_LIBRARY_LINKER_FLAGS "${LIBCXX_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "${LIBCXX_FLAGS}")

FILE(GLOB_RECURSE SRCS src/*.cpp)
FILE(GLOB_RECURSE HDRS src/*.hpp)

ADD_LIBRARY(clientA SHARED ${SRCS} ${HDRS})

