CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0 FATAL_ERROR)

IF (NOT $ENV{CXX} STREQUAL "")
    SET(CMAKE_CXX_COMPILER $ENV{CXX})
ENDIF ()

PROJECT(GameClient CXX)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../include")

SET(CMAKE_CXX_FLAGS "-std=c++1z")

FILE(GLOB_RECURSE SRCS src/*.cpp)
FILE(GLOB_RECURSE HDRS src/*.hpp)

ADD_LIBRARY(clientA SHARED ${SRCS} ${HDRS})

